@@ -1,13 +1,14 @@
 ================================================================
 Copyright (c) 1999-2004 Arnar M. Hrafnkelsson. All rights reserved.
-Copyright (c) 2004 Anthony Cook.
+Copyright (c) 2004-2006 Anthony Cook.
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
 ================================================================
 
 >> THIS SOFTWARE COMES WITH ABSOLUTELY NO WARRANTY WHATSOEVER <<
-If you like or hate Imager, please let us know by sending mail 
-to imager@imager.perl.org
+
+If you like or hate Imager, please let me know by sending mail 
+to imager@imager.perl.org - I love feedback.
 
 ================================================================
 
@@ -195,12 +196,7 @@ at least version 4.1.3.  If you have a recent Linux distribution you
 should be safe with whatever giflib it provides, but if you're
 building from source, please try to use the latest version.
 
-If you download giflib (as opposed to libungif) 4.1.3 from
-sourceforge, make sure you apply the patch referenced at:
-
-https://sourceforge.net/tracker/index.php?func=detail&aid=981255&group_id=102202&atid=631306
-
-libungif 4.1.3 does not need this patch.
+libgif 4.1.4 has no problems known to me at this point.
 
 At the time of writing you will need to manually select to install the
 4.1.2-1 of cygwin's libungif package.
